--- a/app/src/main/res/layout/fragment_task.xml
+++ b/app/src/main/res/layout/fragment_task.xml
@@ -8,6 +8,8 @@
     <!-- TODO: Update blank fragment layout -->
 
     <androidx.recyclerview.widget.RecyclerView
+
+        android:id="@+id/recyclerTasks"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </FrameLayout>
