--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -22,4 +22,10 @@
         android:name="com.example.easy2dolist.ui.slideshow.SlideshowFragment"
         android:label="@string/menu_slideshow"
         tools:layout="@layout/fragment_slideshow" />
+
+    <fragment
+        android:id="@+id/nav_task"
+        android:name="com.example.easy2dolist.ui.task.TaskFragment"
+        android:label="@string/menu_slideshow"
+        tools:layout="@layout/fragment_task" />
 </navigation>
