--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -26,6 +26,15 @@
     <fragment
         android:id="@+id/nav_task"
         android:name="com.example.easy2dolist.ui.task.TaskFragment"
-        android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_task" />
+        android:label="Task"
+        tools:layout="@layout/fragment_task" >
+        <action
+            android:id="@+id/add_new_task"
+            app:destination="@id/nav_new_task" />
+    </fragment>
+    <fragment
+        android:id="@+id/nav_new_task"
+        android:name="com.example.easy2dolist.new_task_fragment"
+        android:label="Add new Task"
+        tools:layout="@layout/fragment_new_task_fragment" />
 </navigation>
